# axum-playground

./: Cargo.toml
src/: main.rs
src/di/: interface.rs  mod.rs  modules.rs
src/domain/root/: controller.rs  mod.rs  route.rs
src/domain/root/todo/: controller.rs  dto.rs  entity.rs  interface.rs  repository.rs  routes.rs
src/domain/root/user/: controller.rs  interface.rs  mod.rs  repository.rs  routes.rs
